--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 <br>
 <iframe id="my_video" src="myvideo.html"></iframe>
 <h1>The Dirty Life: Bob Saget</h1>
+<script src="views.js"></script>
+<div id="view_count">1000 Views</div>
 <p>Bob Saget is awesome & hilarious. Truth.</p>
 <div id="share">Share</div>
 </div>
