--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <iframe id="my_video" src="myvideo.html"></iframe>
 <h1>The Dirty Life: Bob Saget</h1>
 <script src="views.js"></script>
-<div id="view_count">1000 Views</div>
+<div id="view_count"></div>
 <p>Bob Saget is awesome & hilarious. Truth.</p>
 <div id="share">Share</div>
 </div>
