--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <iframe id="my_video" src="myvideo.html"></iframe>
 <h1>The Dirty Life: Bob Saget</h1>
 <script src="views.js"></script>
-<iframe src="https://bob-saget.herokuapp.com/view_this.html" frameborder="0" height="80" width="100"></iframe>
+<iframe src="https://bob-saget.herokuapp.com/view_this.html" style="overflow: hidden; margin-top: -20px; margin-bottom: -20px; border:none;" height="22" width="300"></iframe>
 <div id="view_count"></div>
 <p>Bob Saget is awesome & hilarious. Truth.</p>
 <div id="share">Share</div>
