--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 <link rel="stylesheet" type="text/css" href="fonts/stylesheet.css"/>
 <link rel="stylesheet" type="text/css" href="css/style.css"/>
+<link rel="canonical" href="https://gestople.github.io/bob-saget/" />
 </head>
 <body>
 <div id="nav">
