--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
 <link rel="stylesheet" type="text/css" href="fonts/stylesheet.css"/>
 <link rel="stylesheet" type="text/css" href="css/style.css"/>
 <link rel="canonical" href="https://gestople.github.io/bob-saget/" />
+<script>
+if (window.location.protocol != "https:")
+    window.location.href = "https:" + window.location.href.substring(window.location.protocol.length);
+</script>
 </head>
 <body>
 <div id="nav">
